--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,24 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # State management using observables, actions and reactions
+  # mobx: ^0.3.8+1
+
+  # Flutter wrapper for the mobX library providing the Observer widget
+  flutter_mobx: ^0.3.3+1
+
+  # Pure dart key/value store
+  hive: ^1.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Annotation support for MobX
+  mobx_codegen: ^0.3.9+1
+
+  # Runs code generation operations
+  build_runner: ^1.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
