add service locator add a persistence service with a hive implementation add a mock persistence service for testing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # provides the directory for storing files
   path_provider: ^1.3.0
 
+  # Service locator
+  get_it: ^3.0.0+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
